Define secure Photo lifecycle policy
